Add SDANF guidance by Hautes-Pyrénées

--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
                 <div class="timeline-content">
                     <div class="timeline-date">15 Dec 2025 → </div>
                     <div class="timeline-title">Historical French Identity Documents Search - Hautes-Pyrénées</div>
-                    <div class="timeline-description">Submitted inquiry to Archives départementales des Hautes-Pyrénées seeking historical passport and identity card registers (1939-1951) for Elio Terzo GESSAROLI. Originating email of 12 December was met with a response mandating filling out an online form to submit the request (done on 15 December).<br> <strong>Outcome:</strong> Initially, no documents found. Followed up re: Bachebirou affiliation. </div>
+                    <div class="timeline-description">Submitted inquiry to Archives départementales des Hautes-Pyrénées seeking historical passport and identity card registers (1939-1951) for Elio Terzo GESSAROLI. Originating email of 12 December was met with a response mandating filling out an online form to submit the request (done on 15 December).<br> <strong>Outcome:</strong> Initially, no documents found. Followed up re: Bachebirou affiliation. Also, authority recommended SDANF inquiry; see timeline item 16.</div>
                     <div class="timeline-contact">Contact: Archives départementales des Hautes-Pyrénées</div>
                     <div class="timeline-status status-awaiting">✓ Reopened</div>
                     <div class="document-links">
