Add Archives replyForce sync

--- a/index.html
+++ b/index.html
@@ -952,6 +952,10 @@
                                 <span class="doc-main">📧 Archives auto-reply</span>
                                 <span class="doc-date">15 Dec 2025</span>
                         </a>
+                        <a href="https://drive.google.com/file/d/1fp5pFwEAIy4_U1EN9dbkO2lWwBvupsI7/view?usp=drive_link" class="doc-link" target="_blank">
+                                <span class="doc-main">📧 Archives reply</span>
+                                <span class="doc-date">16 Jan 2026</span>
+                        </a>
                     </div>
                 </div>
             </div>
