Disambiguating Archives nationales abbreviations

--- a/index.html
+++ b/index.html
@@ -961,11 +961,11 @@
                                 <span class="doc-date">16 Jan 2026</span>
                         </a>
                         <a href="https://drive.google.com/file/d/1Et9okvJhE91SCyvxxSf-V6Ay5Jwfxmo6/view?usp=drive_link" class="doc-link" target="_blank">
-                                <span class="doc-main">📜 File number range with refno. (cote)</span>
+                                <span class="doc-main">📜 File number range with reference number (cote)</span>
                                 <span class="doc-date">16 Jan 2026</span>
                         </a>
                         <a href="https://drive.google.com/file/d/1DzR1OQoERcLhIvgAAHS4ZXkA3E5nXXig/view?usp=drive_link" class="doc-link" target="_blank">
-                                <span class="doc-main">📜 Document request detail with reqno.</span>
+                                <span class="doc-main">📜 Document request detail with request number</span>
                                 <span class="doc-date">16 Jan 2026</span>
                         </a>
                     </div>
