Elio millitary dossier mural link

--- a/index.html
+++ b/index.html
@@ -927,6 +927,14 @@
                                 <span class="doc-main">📝 Thank You</span>
                                 <span class="doc-date">9 Jan 2026</span>
                         </a>
+                        <a href="https://app.mural.co/t/lifeplannerjane5531/m/lifeplannerjane5531/1765014166923/44eca43168c1dae66aa9bc591b15e119d628d5a4?wid=0-1768716551239" class="doc-link doc-link-primary" target="_blank">
+                                <span class="doc-main">✅ Military Dossier Mural*</span>
+                                <span class="doc-date">9 Jan 2026</span>
+                        </a>
+                    </div>
+                <div class="timeline-description extra-top-space">
+                    * Mural is best viewed using the Google Chrome browser. Link may be viewed as a visitor.
+                </div>
                     </div>
                 </div>
             </div>
