Reinstate the comment block (it didn't fix the timeline line problem)

--- a/index.html
+++ b/index.html
@@ -1010,6 +1010,19 @@
                                 <span class="doc-main">📤 Request</span>
                                 <span class="doc-date">4 Jan 2026</span>
                         </a>
+                        <!-- New buttons for latest SDANF communications -->
+                        <!-- <a href="..." class="doc-link" target="_blank">
+                                <span class="doc-main">📧 Auto-reply</span>
+                                <span class="doc-date">XX XXX 2026</span>
+                        </a>
+                        <a href="..." class="doc-link" target="_blank">
+                                <span class="doc-main">📧 Response</span>
+                                <span class="doc-date">XX XXX 2026</span>
+                        </a>
+                        <a href="..." class="doc-link" target="_blank">
+                                <span class="doc-main">📝 My Reply</span>
+                                <span class="doc-date">XX XXX 2026</span>
+                        </a> -->
                     </div>
                 </div>
             </div>
