Changing Toulouse status to Complete for consistency (from Response Received)

--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
                     <div class="timeline-title">Historical French Identity Documents Search - Toulouse</div>
                     <div class="timeline-description">Submitted inquiry to Archives départementales de la Haute-Garonne, Toulouse seeking historical passport and identity card registers (1939-1951) for Elio Terzo GESSAROLI.<br> <strong>Outcome:</strong> No documents found. ID documents are discarded after a 20-year period of administrative utility. Recommendation to seek documents via the National Archives (already in process). </div>
                     <div class="timeline-contact">Contact: Archives départementales de la Haute-Garonne</div>
-                    <div class="timeline-status status-completed">✓ Response received</div>
+                    <div class="timeline-status status-completed">✓ Complete</div>
                     <div class="document-links">
                         <a href="https://drive.google.com/file/d/1QdXUfxn5oOB4W8jvmAJkV6YdytLMpBg7/view?usp=drive_link" class="doc-link" target="_blank">
                                 <span class="doc-main">📤 Request</span>
