Typo correction (Bruno to Bruna in item 8)

--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
                 <div class="timeline-content">
                     <div class="timeline-date">2 Dec 2025 → 3 Dec 2025</div>
                     <div class="timeline-title">Historical French Identity Documents Search - Calvados</div>
-                    <div class="timeline-description">Submitted inquiry to Archives départementales du Calvados seeking historical passport and identity card registers (1939-1951) for Elio Terzo GESSAROLI.<br> <strong>Outcome:</strong> Naturalisation dossier (inclusive of naturalisation decree) and Foreigner's Files for Giuseppe and Lorenza Gessaroli. Includes ID Cards that list Bruno and Terzo as children; these coupled with the naturlisation decree and Journal entry may be useful in responding to the Paris Tribunal.</div>
+                    <div class="timeline-description">Submitted inquiry to Archives départementales du Calvados seeking historical passport and identity card registers (1939-1951) for Elio Terzo GESSAROLI.<br> <strong>Outcome:</strong> Naturalisation dossier (inclusive of naturalisation decree) and Foreigner's Files for Giuseppe and Lorenza Gessaroli. Includes ID Cards that list Bruna and Terzo as children; these coupled with the naturlisation decree and Journal entry may be useful in responding to the Paris Tribunal.</div>
                     <div class="timeline-contact">Contact: Archives départementales du Calvados</div>
                     <div class="timeline-status status-delivery">✓ Received (digitally)</div>
                     <div class="document-links">
