Add Authentication footnote and instructions for DHL tracking button

--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
                                 <span class="doc-date">18 Jan 2026</span>
                         </a>
                         <a href="https://www.dhl.com/th-en/home/tracking.html?tracking-id=JD014600012485221978&submit=1&inputsource=marketingstage" class="doc-link" target="_blank">
-                                <span class="doc-main">🚙 DHL Tracking (Auth. Tel. 9029500520)</span>
+                                <span class="doc-main">🚙 DHL Tracking**</span>
                                 <span class="doc-date">18 Jan 2026</span>
                         </a>
                         <a href="https://drive.google.com/file/d/1bsjymcGKdW3UhEeykr3CVuTcN_npYXgw/view?usp=drive_link" class="doc-link" target="_blank">
@@ -587,7 +587,8 @@
                         </a>
                     </div>
                 <div class="timeline-description extra-top-space">
-                    * Mural is best viewed using the Google Chrome browser. Link may be viewed as a visitor.
+                    *  Mural is best viewed using the Google Chrome browser. Link may be viewed as a visitor.
+                    ** If prompted for Authentication on the DHL tracking page, use Telephone Number > 0929500520.
                 </div>
                 </div>
             </div>
