--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                     <div class="timeline-title">Father's Birth Certificate – Request to Cattolica</div>
                     <div class="timeline-description">Requested estratto per riassunto (full birth certificate) of Elio Terzo GESSAROLI from Comune di Cattolica.<br> <strong>Outcome:</strong> Birth certificate found, mailed to Marc-André's address (received 16 Jan 2026) and forwarded to Hua Hin via DHL (expected 28 Jan 2026).</div>
                     <div class="timeline-contact">Contact: Ufficio di Stato Civile, Cattolica (Marina ANDRUCCIOLI)</div>
-                    <div class="timeline-status status-enroute">⏳ En Route by DHL</div>
+                    <div class="timeline-status status-completed">⏳ En Route by DHL</div>
                     <div class="document-links">
                         <a href="https://drive.google.com/file/d/1IIqXxI6_MB4ObzvGFgd3baYwlkzsZR9B/view?usp=drive_link" class="doc-link" target="_blank">
                                 <span class="doc-main">📤 Request</span>
