Remove extraeneous <div>

--- a/index.html
+++ b/index.html
@@ -948,7 +948,7 @@
                 <div class="timeline-content">
                     <div class="timeline-date">13 Dec 2025 → 9 Jan 2026</div>
                     <div class="timeline-title">Military Dossier Identity Documents Search - CAPM Pau</div>
-                    <div class="timeline-description">Submitted inquiry to Centre des Archives du Personnel Militaire (CAPM) seeking the état signalétique et des services (core service record), any copy of the livret militaire or equivalent, any certificates / attestations mentioning French nationality or service for Elio Terzo GESSAROLI.<br> <strong>Outcome:</strong> Document found and shared digitally showing Elio's enrolment and subsequent release from his military obligation.</div></div>
+                    <div class="timeline-description">Submitted inquiry to Centre des Archives du Personnel Militaire (CAPM) seeking the état signalétique et des services (core service record), any copy of the livret militaire or equivalent, any certificates / attestations mentioning French nationality or service for Elio Terzo GESSAROLI.<br> <strong>Outcome:</strong> Document found and shared digitally showing Elio's enrolment and subsequent release from his military obligation.</div>
                     <div class="timeline-contact">Contact: Centre des Archives du Personnel Militaire</div>
                     <div class="timeline-status status-delivery">✓ Received</div>
                     <div class="document-links">
