Add placeholders for document links for Final Submission

--- a/index.html
+++ b/index.html
@@ -1078,13 +1078,13 @@
 
 
             <!-- Document Translation -->
-            <div class="timeline-item pending">
+            <div class="timeline-item complete">
                 <div class="timeline-marker">17</div>
                 <div class="timeline-content">
-                    <div class="timeline-date">TBD</div>
+                    <div class="timeline-date">Not Applicable</div>
                     <div class="timeline-title">Certified French Translations (Traducteur Assermenté)</div>
-                    <div class="timeline-description">Once Italian documents received, send to sworn translator for certified French translations (~€40-60 per document)</div>
-                    <div class="timeline-status status-pending">⏳ Pending</div>
+                    <div class="timeline-description">Requirement: Once Italian documents received, send to sworn translator for certified French translations (~€40-60 per document). <br> <strong>Outcome:</strong> Birth extracts from Italy (Giuseppe and Terzo) both were issued in multilingual format per the 8 September 1976 Vienna Convention and therefore certified French translations are not required.</div>
+                    <div class="timeline-status status-complete">⏭️ Skipped</div>
                 </div>
             </div>
 
@@ -1098,6 +1098,20 @@
                     <div class="timeline-description">Mail complete package with all original documents, certified translations, and French possession-of-status documents to Paris court (via tracked international postal service)</div>
                     <div class="timeline-contact">Deadline: 3 months from 27 Nov 2025</div>
                     <div class="timeline-status status-pending">⏳ Final Step</div>
+                    <div class="document-links">
+                        <!-- New buttons for latest SDANF communications -->
+                        <!-- <a href="..." class="doc-link" target="_blank">
+                                <span class="doc-main">📧 Auto-reply</span>
+                                <span class="doc-date">XX XXX 2026</span>
+                        </a>
+                        <a href="..." class="doc-link" target="_blank">
+                                <span class="doc-main">📧 Response</span>
+                                <span class="doc-date">XX XXX 2026</span>
+                        </a>
+                        <a href="..." class="doc-link" target="_blank">
+                                <span class="doc-main">📝 My Reply</span>
+                                <span class="doc-date">XX XXX 2026</span>
+                        </a> -->
                 </div>
             </div>
         </div>
