Add missing <div>

--- a/index.html
+++ b/index.html
@@ -1113,6 +1113,7 @@
                                 <span class="doc-date">XX XXX 2026</span>
                         </a> -->
                 </div>
+                </div>
             </div>
         </div>
 
