Re-add document links

--- a/index.html
+++ b/index.html
@@ -1098,6 +1098,21 @@
                     <div class="timeline-description">Mail complete package with all original documents, certified translations, and French possession-of-status documents to Paris court (via tracked international postal service)</div>
                     <div class="timeline-contact">Deadline: 3 months from 27 Nov 2025</div>
                     <div class="timeline-status status-pending">⏳ Final Step</div>
+                    <div class="document-links">
+                        <!-- New buttons for latest communications -->
+                        <!-- <a href="..." class="doc-link" target="_blank">
+                                <span class="doc-main">📧 Auto-reply</span>
+                                <span class="doc-date">XX XXX 2026</span>
+                        </a>
+                        <a href="..." class="doc-link" target="_blank">
+                                <span class="doc-main">📧 Response</span>
+                                <span class="doc-date">XX XXX 2026</span>
+                        </a>
+                        <a href="..." class="doc-link" target="_blank">
+                                <span class="doc-main">📝 My Reply</span>
+                                <span class="doc-date">XX XXX 2026</span>
+                        </a> -->
+                    </div>
                 </div>
             </div>
         </div>
