Add item 18 links placeholders

--- a/index.html
+++ b/index.html
@@ -1099,19 +1099,40 @@
                     <div class="timeline-contact">Deadline: 3 months from 27 Nov 2025</div>
                     <div class="timeline-status status-pending">⏳ Final Step</div>
                     <div class="document-links">
-                        <!-- New buttons for latest communications -->
-                        <!-- <a href="..." class="doc-link" target="_blank">
-                                <span class="doc-main">📧 Auto-reply</span>
-                                <span class="doc-date">XX XXX 2026</span>
+                        <!-- New buttons for document links -->
+                        <a href="XXX" class="doc-link" target="_blank">
+                                <span class="doc-main">📝 Final Letter (French)</span>
+                                <span class="doc-date">28 Jan 2026</span>
                         </a>
-                        <a href="..." class="doc-link" target="_blank">
-                                <span class="doc-main">📧 Response</span>
-                                <span class="doc-date">XX XXX 2026</span>
+                        <a href="XXX" class="doc-link" target="_blank">
+                                <span class="doc-main">📝 Final Letter (English)</span>
+                                <span class="doc-date">28 Jan 2026</span>
                         </a>
-                        <a href="..." class="doc-link" target="_blank">
-                                <span class="doc-main">📝 My Reply</span>
-                                <span class="doc-date">XX XXX 2026</span>
-                        </a> -->
+                        <a href="XXX" class="doc-link" target="_blank">
+                                <span class="doc-main">📝 Final Package (PDF)</span>
+                                <span class="doc-date">29 Jan 2026</span>
+                        </a>
+                        <a href="XXX" class="doc-link doc-link-primary" target="_blank">
+                                <span class="doc-main">✅ Final Package Mural*</span>
+                                <span class="doc-date">29 Jan 2026</span>
+                        </a>
+                        <div class="or-button-group">
+                            <a href="https://mydhl.express.dhl/us/en/tracking.html#/results?id=JD014600012485221978"
+                            class="doc-link doc-link-enroute"
+                            target="_blank" rel="noopener noreferrer">
+                                <span class="doc-main">DHL+ Tracking**</span>
+                                <span class="doc-date">18 Jan 2026</span>
+                            </a>
+
+                            <span class="or-label">OR</span>
+
+                            <a href="https://www.dhl.com/th-en/home/tracking.html?tracking-id=JD014600012485221978"
+                            class="doc-link doc-link-enroute"
+                            target="_blank" rel="noopener noreferrer">
+                                <span class="doc-main">DHL–TH Tracking**</span>
+                                <span class="doc-date">18 Jan 2026</span>
+                            </a>
+                        </div>                        
                     </div>
                 </div>
             </div>
