Re-add Mural and DHL footnotes

--- a/index.html
+++ b/index.html
@@ -1132,10 +1132,11 @@
                                 <span class="doc-main">DHL–TH Tracking**</span>
                                 <span class="doc-date">18 Jan 2026</span>
                             </a>
-                <div class="timeline-description extra-top-space">
-                    * Mural is best viewed using the Google Chrome browser. Link may be viewed as a visitor.
-                </div>
                         </div>                        
+                <div class="timeline-description extra-top-space">
+                    * Mural is best viewed using the Google Chrome browser. Link may be viewed as a visitor.<br>
+                    ** If prompted for Authentication on the DHL tracking page, use Telephone Number > 0929500520.
+                </div>
                     </div>
                 </div>
             </div>
