--- a/index.html
+++ b/index.html
@@ -1089,53 +1089,53 @@
             </div>
 
 
-            <!-- Final Submission to Paris -->
-            <div class="timeline-item pending">
+            <!-- Submission to Paris -->
+            <div class="timeline-item enroute">
                 <div class="timeline-marker">18</div>
                 <div class="timeline-content">
-                    <div class="timeline-date">By 27 Feb 2026</div>
-                    <div class="timeline-title">Final Submission to Tribunal judiciaire de Paris</div>
+                    <div class="timeline-date">~16 Feb 2026 (estimated)</div>
+                    <div class="timeline-title">Reply Submitted to Tribunal judiciaire de Paris</div>
                     <div class="timeline-description">Mail complete package with all original documents, certified translations, and French possession-of-status documents to Paris court (via tracked international postal service)</div>
                     <div class="timeline-contact">Deadline: 3 months from 27 Nov 2025</div>
-                    <div class="timeline-status status-pending">⏳ Final Step</div>
+                    <div class="timeline-status status-enroute">🚗 In Transit</div>
                     <div class="document-links">
                         <!-- New buttons for document links -->
                         <a href="https://drive.google.com/file/d/1MmCsCpXVu1qE6Ybn-7SbhcEIzIL07FB-/view?usp=drive_link" class="doc-link" target="_blank">
-                                <span class="doc-main">📝 Final Letter (French)</span>
+                                <span class="doc-main">📝 Reply Letter (French)</span>
                                 <span class="doc-date">28 Jan 2026</span>
                         </a>
                         <a href="https://drive.google.com/file/d/1gsKIODUkmMVs5ia2OUd8OZ1toJUkxsu2/view?usp=drive_link" class="doc-link" target="_blank">
-                                <span class="doc-main">📝 Final Letter (English)</span>
+                                <span class="doc-main">📝 Reply Letter (English)</span>
                                 <span class="doc-date">28 Jan 2026</span>
                         </a>
                         <a href="https://drive.google.com/file/d/11wMto7gSK7Olx4SGXSTSUxUp0SKXXvW8/view?usp=drive_link" class="doc-link" target="_blank">
-                                <span class="doc-main">📝 Final Package (PDF)</span>
+                                <span class="doc-main">📝 Reply Package (PDF)</span>
                                 <span class="doc-date">29 Jan 2026</span>
                         </a>
                         <a href="https://app.mural.co/t/lifeplannerjane5531/m/lifeplannerjane5531/1765014166923/44eca43168c1dae66aa9bc591b15e119d628d5a4?wid=0-1769661647163" class="doc-link doc-link-primary" target="_blank">
-                                <span class="doc-main">✅ Final Package Mural*</span>
+                                <span class="doc-main">✅ Reply Package Mural*</span>
                                 <span class="doc-date">29 Jan 2026</span>
                         </a>
                         <div class="or-button-group">
-                            <a href="https://mydhl.express.dhl/us/en/tracking.html#/results?id=XXX"
+                            <a href="https://mydhl.express.dhl/us/en/tracking.html#/results?id=JD014600012458225148"
                             class="doc-link doc-link-enroute"
                             target="_blank" rel="noopener noreferrer">
                                 <span class="doc-main">DHL+ Tracking**</span>
-                                <span class="doc-date">FUTURE</span>
+                                <span class="doc-date">29 Jan 2026</span>
                             </a>
 
                             <span class="or-label">OR</span>
 
-                            <a href="https://www.dhl.com/th-en/home/tracking.html?tracking-id=XXX"
+                            <a href="https://www.dhl.com/th-en/home/tracking.html?tracking-id=JD014600012458225148"
                             class="doc-link doc-link-enroute"
                             target="_blank" rel="noopener noreferrer">
                                 <span class="doc-main">DHL–TH Tracking**</span>
-                                <span class="doc-date">FUTURE</span>
+                                <span class="doc-date">29 Jan 2026</span>
                             </a>
                         </div>                        
                 <div class="timeline-description extra-top-space">
                     * Mural is best viewed using the Google Chrome browser. Link may be viewed as a visitor.<br>
-                    ** If prompted for Authentication on the DHL tracking page, use Telephone Number > +16109993534.
+                    ** If prompted for Authentication on the DHL tracking page, use Telephone Number > 0929500520.
                 </div>
                     </div>
                 </div>
