Addition of detailed Outcome of step 18

--- a/index.html
+++ b/index.html
@@ -1095,7 +1095,7 @@
                 <div class="timeline-content">
                     <div class="timeline-date">2 Feb 2026</div>
                     <div class="timeline-title">Reply Submitted to Tribunal judiciaire de Paris</div>
-                    <div class="timeline-description">Mail complete package with all original documents, certified translations, and French possession-of-status documents to Paris court (via tracked international postal service).  <br> <strong>Outcome:</strong> Reply delivered to Tribunal 25 days before deadline. </div>
+                    <div class="timeline-description">Mail complete package with all original documents, certified translations, and French possession-of-status documents to Paris court (via tracked international postal service). <br> <strong>Outcome:</strong> Reply delivered to Tribunal 25 days before deadline. Correspondence from Tribunal expected by approximately early April containing either a récépissé stating that the file is now complete or a further request for clarification/documents if they still see gaps.</div>
                     <div class="timeline-contact">Deadline: 27 February 2026 (3 months from 27 Nov 2025)</div>
                     <div class="timeline-status status-delivery">✓ Delivered</div>
                     <div class="document-links">
