Add Tribunal phase timeline; change bottom counter to calculate days since original application

--- a/index2.html
+++ b/index2.html
@@ -498,9 +498,20 @@
         <div class="phase-overview">
             <div class="phase-title">Key Tribunal Phases</div>
             <div class="phase-subtitle">
-                Visual overview from your reply’s delivery to the end of the Tribunal’s decision period.
+                Overview from initial Tribunal response to CNF Demande to the end of the Tribunal’s decision period. Expected completion dates are Perplexity estimates.
             </div>
             <div class="phase-grid">
+                <div class="phase-card" id="phase-delivery">
+                    <div class="phase-card-header">
+                        <div class="phase-name">Tribunal request</div>
+                        <div class="phase-badge phase-badge-past" id="badge-delivery">Past</div>
+                    </div>
+                    <div class="phase-date">27 Nov 2025</div>
+                    <div class="phase-note">
+                        Additional documents request received from the Tribunal to be responded to within three months.
+                    </div>
+                </div>
+
                 <div class="phase-card" id="phase-delivery">
                     <div class="phase-card-header">
                         <div class="phase-name">Reply delivered</div>
@@ -508,18 +519,18 @@
                     </div>
                     <div class="phase-date">2 Feb 2026</div>
                     <div class="phase-note">
-                        Starting point: your complete reply and originals received by the Tribunal.
+                        Response with birth/marriage certificates/other French nationality documents delivered to Tribunal.
                     </div>
                 </div>
 
                 <div class="phase-card" id="phase-recepisse">
                     <div class="phase-card-header">
-                        <div class="phase-name">Récépissé / completeness</div>
+                        <div class="phase-name">Récépissé confirmation</div>
                         <div class="phase-badge phase-badge-future" id="badge-recepisse">Future</div>
                     </div>
                     <div class="phase-date" id="phase-recepisse-date">≈ 30 Mar 2026*</div>
                     <div class="phase-note">
-                        Reasonable latest date to expect either a completeness notice or a further request.
+                        Reasonable latest date to expect either a completeness notice or a further request from the Tribunal.
                     </div>
                 </div>
 
