--- a/index.html
+++ b/index.html
@@ -1265,9 +1265,9 @@
             <h2>Progress Summary</h2>
             <div class="stat-box">
                 <div class="stat-number" id="days-until-deadline"></div>
-                <div class="stat-label">Since Original Application</div>
+                <div class="stat-label">since original application was received by the Paris Tribunal</div>
             </div>
-            <p>You have systematically contacted multiple authorities across Italy, France, and Canada to gather the required documentation for your CNF application. Below is your current progress:</p>
+            <p>This application required systematically contacting multiple authorities across Italy, France, and Canada to gather the required documentation. Below is a view of current progress:</p>
             <div class="summary-stats">
                 <div class="stat-box">
                     <div class="stat-number" id="count-completed"></div>
