--- a/index.html
+++ b/index.html
@@ -1236,7 +1236,31 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Acknowledgement of completeness or further requests from Tribunal -->
+            <div class="timeline-item pending">
+                <div class="timeline-marker">19</div>
+                <div class="timeline-content">
+                    <div class="timeline-date">Before 30 Mar 2026</div>
+                    <div class="timeline-title">Récépissé / acknowledgement of Tribunal's receipt of reply </div>
+                    <div class="timeline-description">Tribunal expected to send an email conveying receipt of the reply to the additional document request. <br> <strong>Outcome:</strong> Two possibilities: (1) Tribunal acknowledges receipt, indicates that the file is complete, and the clock starts ticking on the first six months window within which the Tribunal is expected to reply, or (2) the Tribunal acknowledges receipt of the reply to the initial request and requests further documents and/or information.</div>
+                    <div class="timeline-status status-pending">⌛ Awaiting Reply</div>
+                </div>
+            </div>
+
+
+            <!-- Tribunal Decision -->
+            <div class="timeline-item pending">
+                <div class="timeline-marker">20</div>
+                <div class="timeline-content">
+                    <div class="timeline-date">Between 30 Sep 2026 and 30 Sep 2027</div>
+                    <div class="timeline-title">Tribunal Decision Regarding CNF Issuance </div>
+                    <div class="timeline-description">FUTURE</div>
+                    <div class="timeline-status status-pending">🏆 Future</div>
+                </div>
+            </div>
         </div>
+
 
         <div class="legend">
             <div class="legend-item">
